[package]
name = "rcc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
once_cell = "1.8.0"
clap = { version = "3.0.1", features = ["derive"] }

[profile.dev]
incremental = true
debug = 0
opt-level = 0